--- a/src/scss/_works.scss
+++ b/src/scss/_works.scss
@@ -19,7 +19,7 @@
       &::before {
         position: absolute;
         content: "";
-        background-image: url(../My-portfolio/src/assets/Squares.png);
+        background-image: url(../assets/Squares.png);
         background-size: cover;
         width: 100%;
         height: 100%;
