--- a/src/css/main.css
+++ b/src/css/main.css
@@ -302,7 +302,7 @@ li {
 .works-section__slide .left::before {
   position: absolute;
   content: "";
-  background-image: url(../My-portfolio/src/assets/Squares.png);
+  background-image: url(../assets/Squares.png);
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -586,7 +586,7 @@ li {
   content: "";
   width: 100%;
   height: 100%;
-  background-image: url("/My-portfolio/src/assets/Squares.png");
+  background-image: url("/assets/Squares.png");
   opacity: 0.1;
   -webkit-box-shadow: 0 0 10rem 5rem #e8ebe8 inset;
   box-shadow: 0 0 10rem 5rem #e8ebe8 inset;
