--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -12,7 +12,7 @@
     content: "";
     width: 100%;
     height: 100%;
-    background-image: url("/My-portfolio/src/assets/Squares.png");
+    background-image: url("/assets/Squares.png");
     opacity: 0.1;
     box-shadow: 0 0 10rem 5rem getColor(primary) inset;
   }
